[gd_scene load_steps=5 format=2]

[ext_resource path="res://fonts/Small_SemiBold.tres" type="DynamicFont" id=1]
[ext_resource path="res://fonts/OpenSansSemiBold.tres" type="DynamicFont" id=2]
[ext_resource path="res://game/main_menu/load_game/unknown.png" type="Texture" id=3]
[ext_resource path="res://game/main_menu/load_game/placeholder.gd" type="Script" id=4]

[node name="Game" type="HBoxContainer"]
margin_right = 2250.0
margin_bottom = 400.0
rect_min_size = Vector2( 2000, 400 )
custom_constants/separation = 100
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Thumbnail" type="TextureRect" parent="."]
margin_right = 750.0
margin_bottom = 400.0
rect_min_size = Vector2( 750, 400 )
texture = ExtResource( 3 )

[node name="Border" type="ColorRect" parent="Thumbnail"]
visible = false
modulate = Color( 0.843137, 1, 0.0901961, 1 )
show_behind_parent = true
margin_left = -5.0
margin_top = -5.0
margin_right = 755.0
margin_bottom = 405.0
rect_min_size = Vector2( 760, 410 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_left = 850.0
margin_right = 2250.0
margin_bottom = 400.0
rect_min_size = Vector2( 1400, 400 )

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 1400.0
margin_bottom = 400.0

[node name="Title" type="Label" parent="MarginContainer/VBoxContainer"]
margin_right = 1400.0
margin_bottom = 88.0
custom_fonts/font = ExtResource( 1 )
text = "Ya yeet"

[node name="Date" type="Label" parent="MarginContainer/VBoxContainer"]
margin_top = 96.0
margin_right = 1400.0
margin_bottom = 145.0
custom_fonts/font = ExtResource( 2 )
text = "21-06-2020"

[node name="Player_data" type="Label" parent="MarginContainer/VBoxContainer"]
margin_top = 153.0
margin_right = 1400.0
margin_bottom = 240.0
text = "Level: 1
Player: 20 devices
"
[connection signal="mouse_entered" from="." to="." method="_on_Game_focus"]
[connection signal="mouse_exited" from="." to="." method="_on_Game_lost_focus"]
